# mediapipe-pose-streamlit

./: app.py  pyproject.toml  requirements.txt
